Bug 296614 - Ledger view scrolls to end on merging two transactions.
Summary: Ledger view scrolls to end on merging two transactions.
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 321243 338299 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-23 11:22 UTC by allan
Modified: 2014-09-24 19:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2012-03-23 11:22:36 UTC
User-Agent:       Mozilla/5.0 (X11; Ubuntu; Linux i686; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Build Identifier: 

Working on a newly created kmy file after several imports.  A transaction some months earlier than the present sometimes needs to be matched.

Every time, on doing the match, the view scrolls to the present, and it is necessary to search backwards to find where I was working.

Possible match with bug 290825?


Reproducible: Always

Steps to Reproduce:
1. Import a transaction which involves a transfer, then import the corresponding transaction into the other account.
2. Enter a category in accountA with the accountB name.
3. This causes the creation of another transaction which needs to be matched.
4. Highlight both the click 'match'.
5. The screen scrolls to the end of the ledger, possibly months or years away from the relevant area.
6. Now try to find where you were.

Actual Results:  
As above.

Expected Results:  
The ledger view should not scroll away.
Comment 1 allan 2012-03-23 11:33:58 UTC
The problem also occurs on deleting a non-current transaction.
Comment 2 Cristian Oneț 2014-07-31 08:08:40 UTC
*** Bug 321243 has been marked as a duplicate of this bug. ***
Comment 3 Cristian Oneț 2014-08-28 18:02:06 UTC
*** Bug 338299 has been marked as a duplicate of this bug. ***
Comment 4 Cristian Oneț 2014-08-28 19:17:37 UTC
Git commit cd46fc233d263aab69722c82eeba41cc778bf314 by Cristian Oneț.
Committed on 28/08/2014 at 19:13.
Pushed by conet into branch 'master'.

Select previous/next items when transactions go away from the ledger.

When loading the ledger prepare for the fact that the current selected
transactions might go away by storing the id's of the previous/next
unselected siblings so they may be used to restore a selection.

This should fix all cases of the ledger view scrolling to the last
selection.

M  +38   -9    kmymoney/views/kgloballedgerview.cpp

http://commits.kde.org/kmymoney/cd46fc233d263aab69722c82eeba41cc778bf314
Comment 5 Cristian Oneț 2014-08-28 19:20:28 UTC
Git commit 2316fde061f24e307cbbc37e91c42b9928f597ee by Cristian Oneț.
Committed on 28/08/2014 at 19:13.
Pushed by conet into branch 'frameworks'.

Select previous/next items when transactions go away from the ledger.

When loading the ledger prepare for the fact that the current selected
transactions might go away by storing the id's of the previous/next
unselected siblings so they may be used to restore a selection.

This should fix all cases of the ledger view scrolling to the last
selection.
(cherry picked from commit cd46fc233d263aab69722c82eeba41cc778bf314)

M  +38   -9    kmymoney/views/kgloballedgerview.cpp

http://commits.kde.org/kmymoney/2316fde061f24e307cbbc37e91c42b9928f597ee
Comment 6 Christian David 2014-09-24 19:40:53 UTC
Git commit a8cd47ebeb24d1fa935e258f82d8403f9ca7eb60 by Christian Dávid, on behalf of Cristian Oneț.
Committed on 28/08/2014 at 19:13.
Pushed by christiand into branch 'add-onlinebanking'.

Select previous/next items when transactions go away from the ledger.

When loading the ledger prepare for the fact that the current selected
transactions might go away by storing the id's of the previous/next
unselected siblings so they may be used to restore a selection.

This should fix all cases of the ledger view scrolling to the last
selection.

M  +38   -9    kmymoney/views/kgloballedgerview.cpp

http://commits.kde.org/kmymoney/a8cd47ebeb24d1fa935e258f82d8403f9ca7eb60