Select previous/next items when transactions go away from the ledger.

When loading the ledger prepare for the fact that the current selected
transactions might go away by storing the id's of the previous/next
unselected siblings so they may be used to restore a selection.

This should fix all cases of the ledger view scrolling to the last
selection.

BUG: 296614
(cherry picked from commit cd46fc233d263aab69722c82eeba41cc778bf314)